--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
 }
 
 .movie-card {
+
   background-color: #fff;
   border: 0;
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
@@ -69,4 +70,9 @@ body {
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
+}
+
+a{
+  color: inherit; 
+  text-decoration: none;
 }
